# zyjared-color

./: LICENSE  README.md  clean.bat  gencolor.py  print.py  pyproject.toml  test.py  test0.py  test1.py  zycli.toml
.github/workflows/: release.yml  test.yml
templates/: alias.py  generator.py  init.py  method.py  static.py
tests/: print.py  test_alias.py  test_color.py  test_static.py
zyjared_color/: __init__.py  color.py
zyjared_color/base/: alias.py  color.py  color.pyi  extensions.py  main.py  static.py  static.pyi  styles.py  utils.py  zprint.py
zyjared_color/core/: __init__.py  method.py  static.py  style.py
zyjared_color/extensions/: print.py
zyjared_color/html/: __init__.py  alias.py  html.py  html.pyi  static.py  static.pyi  styles.py
